fix bug on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,8 +1,8 @@
 /* PC */
-@media (min-width: 1024px) {
+@media (min-width: 64em) {
 }
 /* Tablet & mobile */
-@media (max-width: 1024px) {
+@media (max-width: 63.9375em) {
   #nav .subnav a {
     padding: 5px 12px;
   }
@@ -15,9 +15,7 @@
   .contact-form .form-control {
     padding: 15px;
   }
-  #footer .socials-list {
-    font-size: 32px;
-  }
+
   #footer .socials-list a {
     margin: 0px 8px;
   }
@@ -26,10 +24,13 @@
   }
 }
 /* Tablet */
-@media (min-width: 740px) and (max-width: 1023px) {
+@media (min-width: 46.25em) and (max-width: 63.9375em) {
+  #footer .socials-list {
+    font-size: 32px;
+  }
 }
 /* Mobile */
-@media (max-width: 740px) {
+@media (max-width: 46.1875em) {
   .s-full-width,
   .s-col-full {
     width: 100% !important;
