--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,8 @@ html {
   padding: 11px 16px;
   border: none;
   display: inline-block;
+  appearance: none;
+  -webkit-appearance: none; /* cho trd Safari */
 }
 .btn:hover {
   background-color: #ccc;
@@ -180,8 +182,9 @@ html {
   font-size: 24px;
 }
 #slider .text-description {
-  font-size: 15px;
+  font-size: 16px;
   margin-top: 10px;
+  text-shadow: 0 0 1px #000;
 }
 #content .content-section {
   width: 800px;
